# memspec

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  NOTICE  README.md  mise.toml
.claude-plugin/: plugin.json
.claude/agents/: spec-implementer.md  spec-reviewer.md  spec-revisioner.md  spec-scrutinizer.md  spec-slicer.md  spec-synthesizer.md  spec-writer.md
.claude/commands/: memspec-author.md  memspec-genesis.md  memspec-implement.md  memspec-review.md  memspec-revise.md  memspec-slice.md
.codex-plugin/: plugin.json
.codex/prompts/: memspec-author.md  memspec-genesis.md  memspec-implement.md  memspec-review.md  memspec-revise.md  memspec-scrutinize.md  memspec-slice.md
.codex/skills/memspec-author/: SKILL.md
.codex/skills/memspec-implement/: SKILL.md
.codex/skills/memspec-review/: SKILL.md
.codex/skills/memspec-revisions/: SKILL.md
.codex/skills/memspec-scrutinize/: SKILL.md
.codex/skills/memspec-slice/: SKILL.md
.codex/skills/memspec-synthesize/: SKILL.md
crates/memspec-cli/: Cargo.toml
crates/memspec-cli/src/: main.rs  tui.rs
crates/memspec-cli/tests/: synthesize_revision.rs  wrong_file_type_integration.rs
crates/memspec-cli/tests/golden/: synth_revision_2.snippet
crates/memspec-parser/: Cargo.toml
crates/memspec-parser/src/: analysis.rs  ast.rs  diagnostic.rs  lexer.rs  lib.rs  parser.rs  span.rs  token.rs
crates/memspec-parser/src/analysis/: coherence.rs  composition.rs  cross_slice.rs  diff.rs  loader.rs  query.rs  render.rs  revisions.rs  structural.rs  suggest.rs  symmetric_failure.rs
crates/memspec-parser/tests/: multi_slice_integration.rs  revisions_block_fixtures.rs
crates/memspec-parser/tests/fixtures/: rule_lifecycle_minimal.memspec
crates/memspec-parser/tests/fixtures/multi_slice/: rule_audit.memspec  rule_lifecycle.memspec
docs/: grammar-v0.md
