[workspace]
resolver = "3"
members = [
    "crates/memspec-parser",
    "crates/memspec-cli",
]

[workspace.package]
version = "0.0.1"
edition = "2024"
license = "MIT"
authors = ["MortenHusted"]
repository = "https://github.com/logpacer/memspec"
rust-version = "1.95"

[workspace.dependencies]
memspec-parser = { path = "crates/memspec-parser" }

[workspace.lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
