[package]
name = "memspec-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "CLI for the .memspec discipline-enforcing spec framework."

[[bin]]
name = "memspec"
path = "src/main.rs"

[features]
experimental-revisions = ["memspec-parser/experimental-revisions"]

[dependencies]
memspec-parser = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = { version = "0.8", features = ["preserve_order"] }
ratatui = "0.29"
crossterm = "0.28"

[lints]
workspace = true
