[package]
name = "memspec-parser"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Lexer, parser, and analyzer for the .memspec file format."

[lib]
name = "memspec_parser"
path = "src/lib.rs"

[features]
experimental-revisions = ["dep:sha2"]

[dependencies]
serde = { version = "1", features = ["derive"] }
schemars = { version = "0.8", features = ["preserve_order"] }
sha2 = { version = "0.10", optional = true }

[dev-dependencies]
serde_json = "1"

[lints]
workspace = true
